k8s/mongodb-service.yml
apiVersion: v2
kind: Service
metadata:
  name: mongodb
  namespace: chat-app
spec:
  ClientIP: None
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
